added zoom slider to adjust y-axis zoom

--- a/g2AlignmentInterface.ipynb
+++ b/g2AlignmentInterface.ipynb
@@ -637,6 +637,11 @@
     "autoscalingToggle = RadioButtonGroup(labels=[\"ON\",\"OFF\"], active = 0, width = 200)\n",
     "autoscalingActive = autoscalingToggle.active # keep track of the mode\n",
     "\n",
+    "zoomSlider = Slider(start=0.01, end=0.3, value=0.2, step=0.01, title=\"Zoom Amount\", width = 200)\n",
+    "\n",
+    "zoomMaxText = PreText(text = 'Max', width=160)\n",
+    "zoomMinText = PreText(text = 'Min', width=40)\n",
+    "\n",
     "# Make a label reminding counter settings\n",
     "counterSettings = PreText(text = ''' \n",
     "Gate --> Port A\n",
@@ -689,7 +694,7 @@
     "yEndGTR = 1000\n",
     "\n",
     "yStartRatio = -0.1\n",
-    "yEndRatio = 1.01\n",
+    "yEndRatio = 1.2\n",
     "\n",
     "yStartG2 = -1\n",
     "yEndG2 = 3\n",
@@ -943,6 +948,8 @@
     "    # Rescale y-axes only when the autoscaling is on\n",
     "    if autoscalingActive == 0:\n",
     "        \n",
+    "        zoomAmount = zoomSlider.value\n",
+    "        \n",
     "        # check for spikes outside of y_range on all four plots\n",
     "        # if new point y value is outside of y_range, then change range\n",
     "\n",
@@ -1007,14 +1014,14 @@
     "            # if the recent max value is greater than 0:\n",
     "            if recentMaxG > 0:\n",
     "                # reset the y-axis scaling to show recent max plus 0.2 * recent max\n",
-    "                yEndG = recentMaxG*1.2\n",
+    "                yEndG = recentMaxG*(1+zoomAmount)\n",
     "            else:\n",
     "                # reset the upper limit to 1000\n",
     "                yEndG = 1000\n",
     "                \n",
     "            if recentMinG > 0:\n",
     "                # reset the y-axis scaling to show recent min minus 0.2 * recent min\n",
-    "                yStartG = recentMinG*0.8\n",
+    "                yStartG = recentMinG*(1-zoomAmount)\n",
     "            else:\n",
     "                # reset the lower limit to -100\n",
     "                yStartG = -100\n",
@@ -1022,60 +1029,60 @@
     "        if rescaleCountT >= 5: \n",
     "            rescaleCountT = 0\n",
     "            if recentMaxT > 0:\n",
-    "                yEndT = recentMaxT*1.2\n",
+    "                yEndT = recentMaxT*(1+zoomAmount)\n",
     "            else:\n",
     "                yEndT = 1000\n",
     "                \n",
     "            if recentMinT > 0:\n",
-    "                yStartT = recentMinT*0.8\n",
+    "                yStartT = recentMinT*(1-zoomAmount)\n",
     "            else:\n",
     "                yStartT = -100\n",
     "\n",
     "        if rescaleCountR >= 5: \n",
     "            rescaleCountR = 0\n",
     "            if recentMaxR > 0:\n",
-    "                yEndR = recentMaxR*1.2\n",
+    "                yEndR = recentMaxR*(1+zoomAmount)\n",
     "            else:\n",
     "                yEndR = 1000\n",
     "            \n",
     "            if recentMinR > 0:\n",
-    "                yStartR = recentMinR*0.8\n",
+    "                yStartR = recentMinR*(1-zoomAmount)\n",
     "            else:\n",
     "                yStartR = -100\n",
     "\n",
     "        if rescaleCountGT >= 5:\n",
     "            rescaleCountGT = 0\n",
     "            if recentMaxGT > 0:\n",
-    "                yEndGT = recentMaxGT*1.2\n",
+    "                yEndGT = recentMaxGT*(1+zoomAmount)\n",
     "            else:\n",
     "                yEndGT = 1000\n",
     "                \n",
     "            if recentMinGT > 0:\n",
-    "                yStartGT = recentMinGT*0.8\n",
+    "                yStartGT = recentMinGT*(1-zoomAmount)\n",
     "            else:\n",
     "                yStartGT = -100\n",
     "\n",
     "        if rescaleCountGR >= 5: \n",
     "            rescaleCountGR = 0\n",
     "            if recentMaxGR > 0:\n",
-    "                yEndGR = recentMaxGR*1.2\n",
+    "                yEndGR = recentMaxGR*(1+zoomAmount)\n",
     "            else:\n",
     "                yEndGR = 1000\n",
     "                \n",
     "            if recentMinGR > 0:\n",
-    "                yStartGR = recentMinGR*0.8\n",
+    "                yStartGR = recentMinGR*(1-zoomAmount)\n",
     "            else:\n",
     "                yStartGR = -100\n",
     "\n",
     "        if rescaleCountGTR >= 5:\n",
     "            rescaleCountGTR = 0\n",
     "            if recentMaxGTR > 0:\n",
-    "                yEndGTR = recentMaxGTR*1.2\n",
+    "                yEndGTR = recentMaxGTR*(1+zoomAmount)\n",
     "            else:\n",
     "                yEndGTR = 1000\n",
     "                \n",
     "            if recentMinGTR > 0:\n",
-    "                yStartGTR = recentMinGTR*0.8\n",
+    "                yStartGTR = recentMinGTR*(1-zoomAmount)\n",
     "            else:\n",
     "                yStartGTR = -100\n",
     "\n",
@@ -1296,6 +1303,8 @@
     "        #else:\n",
     "        #autoscalingToggle.label = \"Autoscaling OFF\"\n",
     "        \n",
+    "        zoomAmount = zoomSlider.value\n",
+    "        \n",
     "        # use global variable\n",
     "        global yStartG\n",
     "        global yStartT\n",
@@ -1323,28 +1332,28 @@
     "        # plots with multiple lines are not changed\n",
     "        # only update if counts are not all zeros, otherwise do nothing\n",
     "        if np.mean(last5G) > 0:\n",
-    "            yStartG = 0.8 * np.mean(last5G)\n",
-    "            yEndG = 1.2 * np.mean(last5G)\n",
+    "            yStartG = (1-zoomAmount) * np.mean(last5G)\n",
+    "            yEndG = (1+zoomAmount) * np.mean(last5G)\n",
     "        \n",
     "        if np.mean(last5T) > 0:\n",
-    "            yStartT = 0.8 * np.mean(last5T)\n",
-    "            yEndT = 1.2 * np.mean(last5T)\n",
+    "            yStartT = (1-zoomAmount) * np.mean(last5T)\n",
+    "            yEndT = (1+zoomAmount) * np.mean(last5T)\n",
     "        \n",
     "        if np.mean(last5R) > 0:\n",
-    "            yStartR = 0.8 * np.mean(last5R)\n",
-    "            yEndR = 1.2 * np.mean(last5R)\n",
+    "            yStartR = (1-zoomAmount) * np.mean(last5R)\n",
+    "            yEndR = (1+zoomAmount) * np.mean(last5R)\n",
     "            \n",
     "        if np.mean(last5GT) > 0:\n",
-    "            yStartGT = 0.8 * np.mean(last5GT)\n",
-    "            yEndGT = 1.2 * np.mean(last5GT)\n",
+    "            yStartGT = (1-zoomAmount) * np.mean(last5GT)\n",
+    "            yEndGT = (1+zoomAmount) * np.mean(last5GT)\n",
     "            \n",
     "        if np.mean(last5GR) > 0:\n",
-    "            yStartGR = 0.8 * np.mean(last5GR)\n",
-    "            yEndGR = 1.2 * np.mean(last5GR)\n",
+    "            yStartGR = (1-zoomAmount) * np.mean(last5GR)\n",
+    "            yEndGR = (1+zoomAmount) * np.mean(last5GR)\n",
     "            \n",
     "        if np.mean(last5GTR) > 0:\n",
-    "            yStartGTR = 0.8 * np.mean(last5GTR)\n",
-    "            yEndGTR = 1.2 * np.mean(last5GTR)\n",
+    "            yStartGTR = (1-zoomAmount) * np.mean(last5GTR)\n",
+    "            yEndGTR = (1+zoomAmount) * np.mean(last5GTR)\n",
     "            \n",
     "            \n",
     "        \n",
@@ -1355,6 +1364,79 @@
     "        coincidenceCountsGTPlot.y_range.update(start = yStartGT, end = yEndGT)\n",
     "        coincidenceCountsGRPlot.y_range.update(start = yStartGR, end = yEndGR)\n",
     "        coincidenceCountsGTRPlot.y_range.update(start = yStartGTR, end = yEndGTR)\n",
+    "\n",
+    "        \n",
+    "        \n",
+    "def change_zoom(attr, old, new):\n",
+    "    \n",
+    "    if autoscalingActive == 1:\n",
+    "        \n",
+    "        zoomAmount = zoomSlider.value\n",
+    "        \n",
+    "        # use global variable\n",
+    "        global yStartG\n",
+    "        global yStartT\n",
+    "        global yStartR\n",
+    "        global yStartGT\n",
+    "        global yStartGR\n",
+    "        global yStartGTR\n",
+    "\n",
+    "        global yEndG\n",
+    "        global yEndT\n",
+    "        global yEndR\n",
+    "        global yEndGT\n",
+    "        global yEndGR\n",
+    "        global yEndGTR\n",
+    "        \n",
+    "        # use global last five points lists\n",
+    "        global last5G\n",
+    "        global last5T\n",
+    "        global last5R\n",
+    "        global last5GT\n",
+    "        global last5GR\n",
+    "        global last5GTR\n",
+    "        \n",
+    "        # update the y range in terms of the average value of the most recet 5 points\n",
+    "        # plots with multiple lines are not changed\n",
+    "        # only update if counts are not all zeros, otherwise do nothing\n",
+    "        if np.mean(last5G) > 0:\n",
+    "            yStartG = (1-zoomAmount) * np.mean(last5G)\n",
+    "            yEndG = (1+zoomAmount) * np.mean(last5G)\n",
+    "        \n",
+    "        if np.mean(last5T) > 0:\n",
+    "            yStartT = (1-zoomAmount) * np.mean(last5T)\n",
+    "            yEndT = (1+zoomAmount) * np.mean(last5T)\n",
+    "        \n",
+    "        if np.mean(last5R) > 0:\n",
+    "            yStartR = (1-zoomAmount) * np.mean(last5R)\n",
+    "            yEndR = (1+zoomAmount) * np.mean(last5R)\n",
+    "            \n",
+    "        if np.mean(last5GT) > 0:\n",
+    "            yStartGT = (1-zoomAmount) * np.mean(last5GT)\n",
+    "            yEndGT = (1+zoomAmount) * np.mean(last5GT)\n",
+    "            \n",
+    "        if np.mean(last5GR) > 0:\n",
+    "            yStartGR = (1-zoomAmount) * np.mean(last5GR)\n",
+    "            yEndGR = (1+zoomAmount) * np.mean(last5GR)\n",
+    "            \n",
+    "        if np.mean(last5GTR) > 0:\n",
+    "            yStartGTR = (1-zoomAmount) * np.mean(last5GTR)\n",
+    "            yEndGTR = (1+zoomAmount) * np.mean(last5GTR)\n",
+    "            \n",
+    "            \n",
+    "        \n",
+    "        # update the y axis range\n",
+    "        singleCountsGPlot.y_range.update(start = yStartG, end = yEndG)\n",
+    "        singleCountsTPlot.y_range.update(start = yStartT, end = yEndT)\n",
+    "        singleCountsRPlot.y_range.update(start = yStartR, end = yEndR)\n",
+    "        coincidenceCountsGTPlot.y_range.update(start = yStartGT, end = yEndGT)\n",
+    "        coincidenceCountsGRPlot.y_range.update(start = yStartGR, end = yEndGR)\n",
+    "        coincidenceCountsGTRPlot.y_range.update(start = yStartGTR, end = yEndGTR)\n",
+    "        \n",
+    "    else:\n",
+    "        \n",
+    "        zoomWarningText.text = 'Waiting for rescale to update zoom...'\n",
+    "        \n",
     "\n",
     "    \n",
     "# When the START/STOP button is clicked, call the change_periodic_callback function\n",
@@ -1376,9 +1458,12 @@
     "# When the autoscaling toggle button is clicked, call the change_autoscaling_mode function\n",
     "autoscalingToggle.on_click(change_autoscaling_mode)\n",
     "\n",
-    "\n",
+    "# When zoom value is changed, change zoom amount\n",
+    "zoomSlider.on_change('value', change_zoom)\n",
     "\n",
     "# Set up layouts and add to document\n",
+    "\n",
+    "zoomTextRow = row([zoomMaxText, zoomMinText])\n",
     "\n",
     "# create a column of user input widgets\n",
     "userInputWidgets = column(startStopButtonGroup, \n",
@@ -1387,7 +1472,9 @@
     "                          resetGraphButton,\n",
     "                          saveDataButton,\n",
     "                          autoscalingText,\n",
-    "                          autoscalingToggle\n",
+    "                          autoscalingToggle,\n",
+    "                          zoomSlider,\n",
+    "                          zoomTextRow\n",
     "                         )\n",
     "\n",
     "\n",
