New three graph layout

--- a/g2AlignmentInterface.ipynb
+++ b/g2AlignmentInterface.ipynb
@@ -389,29 +389,29 @@
     "\n",
     "\n",
     "# Create our 6 plots (3 singles, 3 coincidences)\n",
-    "singleCountsGPlot = figure(plot_height=260, plot_width=1000, title=\"Single Counts Gate\",\n",
+    "singleCountsGPlot = figure(plot_height=320, plot_width=600, title=\"Single Counts Gate\",\n",
     "              tools=\"crosshair,pan,reset,save,wheel_zoom\", tooltips = GHover\n",
     "                          )\n",
     "\n",
-    "singleCountsTPlot = figure(plot_height=260, plot_width=1000, title=\"Single Counts Transmitted\",\n",
+    "singleCountsTPlot = figure(plot_height=340, plot_width=600, title=\"Single Counts Transmitted\",\n",
     "              tools=\"crosshair,pan,reset,save,wheel_zoom\", tooltips = THover\n",
     "                          )\n",
     "\n",
-    "singleCountsRPlot = figure(plot_height=260, plot_width=1000, title=\"Single Counts Reflected\",\n",
+    "singleCountsRPlot = figure(plot_height=340, plot_width=600, title=\"Single Counts Reflected\",\n",
     "              tools=\"crosshair,pan,reset,save,wheel_zoom\", tooltips = RHover\n",
     "                          )\n",
     "\n",
-    "coincidenceCountsGTPlot = figure(plot_height=260, plot_width=1000, \n",
+    "coincidenceCountsGTPlot = figure(plot_height=320, plot_width=600, \n",
     "                                 title=\"Coincidence Counts Gate and Transmitted\",\n",
     "              tools=\"crosshair,pan,reset,save,wheel_zoom\", tooltips = GTHover\n",
     "                                )\n",
     "\n",
-    "coincidenceCountsGRPlot = figure(plot_height=260, plot_width=1000, \n",
+    "coincidenceCountsGRPlot = figure(plot_height=340, plot_width=600, \n",
     "                                 title=\"Coincidence Counts Gate and Reflected\",\n",
     "              tools=\"crosshair,pan,reset,save,wheel_zoom\", tooltips = GRHover\n",
     "                                )\n",
     "\n",
-    "coincidenceCountsGTRPlot = figure(plot_height=260, plot_width=1000, \n",
+    "coincidenceCountsGTRPlot = figure(plot_height=340, plot_width=600, \n",
     "                                 title=\"Three-fold Coincidence Counts\",\n",
     "              tools=\"crosshair,pan,reset,save,wheel_zoom\", tooltips = GTRHover\n",
     "                                 )\n",
@@ -598,11 +598,11 @@
     "# Set x-axis labels for bottom-most graphs\n",
     "\n",
     "#singleCountsGPlot.xaxis.axis_label = \"Time (s)\"\n",
-    "#singleCountsTPlot.xaxis.axis_label = \"Time (s)\"\n",
+    "singleCountsTPlot.xaxis.axis_label = \"Time (s)\"\n",
     "singleCountsRPlot.xaxis.axis_label = \"Time (s)\"\n",
     "\n",
     "#coincidenceCountsGTPlot.xaxis.axis_label = \"Time (s)\"\n",
-    "#coincidenceCountsGRPlot.xaxis.axis_label = \"Time (s)\"\n",
+    "coincidenceCountsGRPlot.xaxis.axis_label = \"Time (s)\"\n",
     "coincidenceCountsGTRPlot.xaxis.axis_label = \"Time (s)\"\n",
     "\n",
     "\n",
@@ -1479,13 +1479,17 @@
     "\n",
     "# create a column with our three plots\n",
     "plotsColumn1 = column([coincidenceCountsGTPlot,\n",
-    "                       coincidenceCountsGRPlot,\n",
-    "                       coincidenceCountsGTRPlot\n",
+    "                       coincidenceCountsGRPlot\n",
+    "                      ])\n",
+    "\n",
+    "plotsColumn11 = column([coincidenceCountsGTRPlot\n",
     "                      ])\n",
     "\n",
     "plotsColumn2 = column([singleCountsGPlot, \n",
-    "                       singleCountsTPlot,\n",
-    "                       singleCountsRPlot\n",
+    "                       singleCountsTPlot\n",
+    "                     ])\n",
+    "\n",
+    "plotsColumn21 = column([singleCountsRPlot\n",
     "                     ])\n",
     "\n",
     "plotsColumn3 = column([ratioPlot, \n",
@@ -1502,9 +1506,9 @@
     "\n",
     "\n",
     "\n",
-    "singlesCountsLayout = row([userInputWidgets, plotsColumn2])\n",
+    "singlesCountsLayout = row([userInputWidgets, plotsColumn2, plotsColumn21], sizing_mode='scale_height')\n",
     "\n",
-    "coincidenceCountsLayout = row([userInputWidgets, plotsColumn1])\n",
+    "coincidenceCountsLayout = row([userInputWidgets, plotsColumn1, plotsColumn11], sizing_mode='scale_height')\n",
     "\n",
     "ratioG2Layout = row([userInputWidgets, plotsColumn3])\n",
     "\n",
@@ -1573,7 +1577,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
