fixed zoom bug, increased starting zoom value

--- a/g2AlignmentInterface.ipynb
+++ b/g2AlignmentInterface.ipynb
@@ -389,35 +389,35 @@
     "\n",
     "\n",
     "# Create our 6 plots (3 singles, 3 coincidences)\n",
-    "singleCountsGPlot = figure(plot_height=320, plot_width=600, title=\"Single Counts Gate\",\n",
+    "singleCountsGPlot = figure(plot_height=360, plot_width=600, title=\"Single Counts Gate\",\n",
     "              tools=\"crosshair,pan,reset,save,wheel_zoom\", tooltips = GHover\n",
     "                          )\n",
     "\n",
-    "singleCountsTPlot = figure(plot_height=340, plot_width=600, title=\"Single Counts Transmitted\",\n",
+    "singleCountsTPlot = figure(plot_height=380, plot_width=600, title=\"Single Counts Transmitted\",\n",
     "              tools=\"crosshair,pan,reset,save,wheel_zoom\", tooltips = THover\n",
     "                          )\n",
     "\n",
-    "singleCountsRPlot = figure(plot_height=340, plot_width=600, title=\"Single Counts Reflected\",\n",
+    "singleCountsRPlot = figure(plot_height=380, plot_width=600, title=\"Single Counts Reflected\",\n",
     "              tools=\"crosshair,pan,reset,save,wheel_zoom\", tooltips = RHover\n",
     "                          )\n",
     "\n",
-    "coincidenceCountsGTPlot = figure(plot_height=320, plot_width=600, \n",
+    "coincidenceCountsGTPlot = figure(plot_height=360, plot_width=600, \n",
     "                                 title=\"Coincidence Counts Gate and Transmitted\",\n",
     "              tools=\"crosshair,pan,reset,save,wheel_zoom\", tooltips = GTHover\n",
     "                                )\n",
     "\n",
-    "coincidenceCountsGRPlot = figure(plot_height=340, plot_width=600, \n",
+    "coincidenceCountsGRPlot = figure(plot_height=380, plot_width=600, \n",
     "                                 title=\"Coincidence Counts Gate and Reflected\",\n",
     "              tools=\"crosshair,pan,reset,save,wheel_zoom\", tooltips = GRHover\n",
     "                                )\n",
     "\n",
-    "coincidenceCountsGTRPlot = figure(plot_height=340, plot_width=600, \n",
+    "coincidenceCountsGTRPlot = figure(plot_height=380, plot_width=600, \n",
     "                                 title=\"Three-fold Coincidence Counts\",\n",
     "              tools=\"crosshair,pan,reset,save,wheel_zoom\", tooltips = GTRHover\n",
     "                                 )\n",
     "\n",
     "# Hover tools for plots with multiple lines are added later \n",
-    "ratioPlot = figure(plot_height=380, plot_width=1000, \n",
+    "ratioPlot = figure(plot_height=360, plot_width=1000, \n",
     "                                 title=\"Coincidences to Single Counts Ratio\",\n",
     "              tools=\"crosshair,pan,reset,save,wheel_zoom\"\n",
     "                                 ) \n",
@@ -637,7 +637,7 @@
     "autoscalingToggle = RadioButtonGroup(labels=[\"ON\",\"OFF\"], active = 0, width = 200)\n",
     "autoscalingActive = autoscalingToggle.active # keep track of the mode\n",
     "\n",
-    "zoomSlider = Slider(start=1, end=100, value=1, step=1, title=\"Zoom Amount (%)\", width = 200)\n",
+    "zoomSlider = Slider(start=1, end=100, value=33, step=1, title=\"Zoom Amount (%)\", width = 200)\n",
     "\n",
     "zoomMaxText = PreText(text = 'Max', width=40)\n",
     "zoomMinText = PreText(text = 'Min', width=160)\n",
@@ -1304,7 +1304,7 @@
     "        #else:\n",
     "        #autoscalingToggle.label = \"Autoscaling OFF\"\n",
     "        \n",
-    "        zoomAmount = zoomSlider.value / 1000 * 3\n",
+    "        zoomAmount = (101 - zoomSlider.value) / 1000 * 3\n",
     "        \n",
     "        # use global variable\n",
     "        global yStartG\n",
@@ -1578,7 +1578,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
