Changes made during tests
g2AlignmentInterface0909 is the updated version of the g2AlignmentInterface with 2 tabs allowing us to see single counts and coincidence counts in the same tab. There are also small changes made in the SinglePhotonInterferenceInterface

--- a/SinglePhotonInterferenceInterface.ipynb
+++ b/SinglePhotonInterferenceInterface.ipynb
@@ -292,7 +292,7 @@
     "# Set up user widgets\n",
     "\n",
     "# Set up slider for user to choose counting time (100ms to 1000ms)\n",
-    "countingTimeSlider = Slider(start=0.5, end=20, value=1, step=0.5, title=\"Counting Time (s)\")\n",
+    "countingTimeSlider = Slider(start=0.1, end=20, value=1, step=0.1, title=\"Counting Time (s)\")\n",
     "countingTime = countingTimeSlider.value # initialize the variable to store the counting interval\n",
     "\n",
     "\n",
@@ -303,7 +303,7 @@
     "runExperimentButton = Button(label = 'Run Experiment', button_type = 'primary')\n",
     "\n",
     "# Set up slider for user to set voltage range for piezoelectric\n",
-    "voltageRangeSlider = Slider(start=0, end=160, value=160, step=1, title=\"Voltage Range (V)\")\n",
+    "voltageRangeSlider = Slider(start=0, end=140, value=140, step=1, title=\"Voltage Range (V)\")\n",
     "voltageRange = voltageRangeSlider.value # initialize the variable to store the voltage range\n",
     "\n",
     "# Set up slider for user to set voltage step for piezoelectric\n",
@@ -434,7 +434,7 @@
     "\n",
     "numberDataPoints = 0\n",
     "\n",
-    "outputVoltage = 0\n",
+    "outputVoltage = 20\n",
     "\n",
     "totalNumberDataPoints = 0\n",
     "\n",
@@ -472,7 +472,7 @@
     "        \n",
     "        # the board ouput voltage number (0 - 255) is related to the desired output voltage in this way\n",
     "        # round to the nearest whole number\n",
-    "        boardOutputVoltage = round((outputVoltage/40)/0.016)\n",
+    "        boardOutputVoltage = round((outputVoltage/49.3)/0.016)\n",
     "        \n",
     "        # send voltage command\n",
     "        voltageCommand = \"V\" + str(boardOutputVoltage) + \"\\n\"\n",
@@ -482,7 +482,7 @@
     "        \n",
     "        # the true output voltage is slightly different from desired output voltage due to rounding\n",
     "        # it is based on the number command sent to board\n",
-    "        trueOutputVoltage = boardOutputVoltage*0.016*40\n",
+    "        trueOutputVoltage = boardOutputVoltage*0.016*49.3\n",
     "\n",
     "        \n",
     "        # Request data from the CD48 counter\n",
@@ -561,7 +561,7 @@
     "    voltageRange = voltageRangeSlider.value\n",
     "    voltageStep = voltageStepSlider.value\n",
     "    \n",
-    "    totalNumberDataPoints = int(voltageRange/voltageStep) + 1\n",
+    "    totalNumberDataPoints = int((voltageRange - 20)/voltageStep) + 1\n",
     "    \n",
     "    # voltage from the board goes from 0 to 4.08 with over command range 0 to 255\n",
     "    # so you can output voltages at step 0.016V  (0.016 * 255 = 4.08,  0.016*250 = 4)\n",
@@ -570,7 +570,7 @@
     "    \n",
     "    numberDataPoints = 0\n",
     "    \n",
-    "    outputVoltage = 0\n",
+    "    outputVoltage = 20\n",
     "    \n",
     "    runningTime = 0\n",
     "    \n",
@@ -578,6 +578,7 @@
     "    s.write(\"c\\n\".encode())\n",
     "    serialData = s.readline()\n",
     "    \n",
+    "    #curdoc().remove_periodic_callback(callback_id)\n",
     "    callback_id = curdoc().add_periodic_callback(update_data, countingTime*1000)\n",
     "    \n",
     "\n",
@@ -601,7 +602,12 @@
     "    # empty all data lists in source\n",
     "    source.data = {k: [] for k in source.data}\n",
     "    \n",
-    "\n",
+    "    voltageCommand = \"V\" + str(0) + \"\\n\"\n",
+    "        \n",
+    "    s.write(voltageCommand.encode())\n",
+    "    voltRead = s.readline()\n",
+    "    \n",
+    "'''\n",
     "def change_callback_period(attr, old, new):\n",
     "    # use global variable\n",
     "    global callback_id\n",
@@ -613,10 +619,10 @@
     "        curdoc().remove_periodic_callback(callback_id)\n",
     "        \n",
     "        # Add a periodic_callback, the callback interval is stored in the variable countingTime\n",
-    "        #global countingTime\n",
+    "        global countingTime\n",
     "        countingTime = countingTimeSlider.value\n",
-    "        callback_id = curdoc().add_periodic_callback(update_data, countingTime)\n",
-    "        \n",
+    "        callback_id = curdoc().add_periodic_callback(update_data, countingTime*1000)\n",
+    "'''        \n",
     "        \n",
     "    \n",
     "# This part doesn't work yet\n",
