--- a/ODMRInterface.ipynb
+++ b/ODMRInterface.ipynb
@@ -290,10 +290,8 @@
     "# use a Column Data Source, intially all lists are empty\n",
     "\n",
     "source = ColumnDataSource(dict(timeList=[],\n",
-    "                               voltageList = [],\n",
-    "                               singleCountsA=[], \n",
-    "                               singleCountsB=[], \n",
-    "                               coincidenceCountsAB=[]\n",
+    "                               frequencyList = [],\n",
+    "                               singleCountsA=[]\n",
     "                              ))\n",
     "\n",
     "\n",
@@ -315,11 +313,11 @@
     "runExperimentButton = Button(label = 'Run Experiment', button_type = 'primary')\n",
     "\n",
     "# Set up slider for user to set voltage range for piezoelectric\n",
-    "voltageRangeSlider = Slider(start=0, end=140, value=140, step=1, title=\"Voltage Range (V)\")\n",
-    "voltageRange = voltageRangeSlider.value # initialize the variable to store the voltage range\n",
+    "frequencyRangeSlider = Slider(start=2.80, end=2.95, value=2.90, step=0.05, title=\"Frequency Range (GHz)\")\n",
+    "frequencyRange = frequencyRangeSlider.value # initialize the variable to store the frequency range\n",
     "\n",
     "# Set up slider for user to set voltage step for piezoelectric\n",
-    "voltageStepSlider = Slider(start=1, end=10, value=5, step=0.5, title=\"Voltage Step (V)\")\n",
+    "frequencyStepSlider = Slider(start=250, end=1000, value=1000, step=250, title=\"Frequency Step (Hz)\")\n",
     "\n",
     "# Set up the reset button, to clear the graph of all data\n",
     "resetGraphButton = Button(label=\"Reset\")\n",
